[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.51.0",
]
